# script_locker

./: README.md  package.json  pyproject.toml
examples/demo_resource/: fxmanifest.lua
examples/demo_resource/client/: client.lua
examples/demo_resource/server/: server.lua
src/fivem_locker/: cli.py  crypto.py  loader_template.lua  packer.py
tools/: setup.py
tools/fivem_locker/: cli.py  core.py  crypto.py  loader.py  lua_minify.py  manifest.py
